BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Clm_Presentation_vod__c.object
<CustomObject>
    <description>Closed Loop Marketing presentations.</description>
    <fields>
        <fullName>Approved_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the presentation has been reviewed and approved so that it can be migrated</description>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Visibility_vod__c</fullName>
        <description>If Product is selected, then Detail Group field is ignored when determining CLM content visibility.  If Detail Group is selected, then Product field is ignored when determining CLM content visibility.</description>
        <label>Control Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Product_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail_Group_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copied_From_vod__c</fullName>
        <description>Populated with the 18 digit org ID from which this presentation was copied. If the presentation was created in the current org, this field is blank</description>
        <label>Copied From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Date_vod__c</fullName>
        <description>Populated with the Date and Time when the presentation record was copied from a different org.</description>
        <label>Copied On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Country_Code_BMS_EMEA__c</fullName>
        <description>VPRO Dec-2015: Created to be able to drive Sharing Rules based on the values</description>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivate_Date_BMS_SHARED__c</fullName>
        <label>Deactivate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivate_Date_BMS_US__c</fullName>
        <label>Deactivate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Presentation_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this presentation is the default presentation for the associated product.</description>
        <label>Default Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Contains the description of the CLM Presentation.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directory_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to reference what directory the Presentation is in.</description>
        <label>Directory</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Directory record must have Record Type = CLM_vod</errorMessage>
            <filterItems>
                <field>Directory_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CLM_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Directory_vod__c</referenceTo>
        <relationshipLabel>CLM Presentations</relationshipLabel>
        <relationshipName>CLM_Presentations_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enable_Survey_Overlay_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the survey associated to the presentation to appear in the CRM overlay.</description>
        <label>Enable Survey Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Date when the presentation is made unavailable for users to record calls against.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Content_vod__c</fullName>
        <description>Used to store the content type.</description>
        <label>Event Content</label>
        <picklist>
            <picklistValues>
                <fullName>Events_Only_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events_CLM_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Force_Type_BMS_SHARED__c</fullName>
        <description>VPRO EMEA Dec-2015: Created to drive the Sharing Rules</description>
        <label>Field Force Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groups_BMS_SHARED__c</fullName>
        <label>Groups</label>
        <picklist>
            <picklistValues>
                <fullName>BYDUREON – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-DISEASE STATE – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-DISEASE STATE – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-Early Emerging – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-Early Emerging – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-PORTFOLIO – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-PORTFOLIO – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORXIGA – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORXIGA – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYALEPT – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYALEPT – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Groups_BMS_US__c</fullName>
        <label>Groups</label>
        <picklist>
            <picklistValues>
                <fullName>BYDUREON – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYDUREON – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYETTA – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-DISEASE STATE – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-DISEASE STATE – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-Early Emerging – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-Early Emerging – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-PORTFOLIO – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM-PORTFOLIO – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORXIGA – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORXIGA – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KOMBIGLYZE XR – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYALEPT – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYALEPT – Reactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Posters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Proactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Publications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONGLYZA – Reactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this presentation is not shown in the CLM Presentations view and does not appear in the presentation picker.</description>
        <label>Hidden?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords_vod__c</fullName>
        <description>Comma separated keywords of the CLM Presentation.</description>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MNG_Number_BMS_SHARED__c</fullName>
        <label>MNG Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MNG_Number_BMS_US__c</fullName>
        <label>MNG Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Record_ID_vod__c</fullName>
        <description>Populated with the 18 digit SFDC ID in the source org for this presentation.</description>
        <label>Original Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId_vod__c</fullName>
        <description>Parent Id of the presentation.</description>
        <label>Parent Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_ID_18_BMS__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Presentation ID 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Id_vod__c</fullName>
        <description>Exploria Id of the presentation.</description>
        <externalId>true</externalId>
        <label>Presentation Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product associated with this presentation.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>CLM Presentations</relationshipLabel>
        <relationshipName>CLM_Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resouce_Type_BMS_SHARED__c</fullName>
        <label>Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>Slide Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resource_Type_BMS_US__c</fullName>
        <label>Resource Type</label>
        <picklist>
            <picklistValues>
                <fullName>Slide Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Date when the presentation is available for users to record calls against.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the presentation on the CDN. A piece of content will either be &apos;Approved&apos;, &apos;Staged&apos;, or &apos;Expired&apos;</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staged_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate the survey lookup if the CLM presentation will reference surveys.</description>
        <label>Survey</label>
        <referenceTo>Survey_vod__c</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>CLM_Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Presentations marked as training content will only be displayed in the media viewer when training mode is enabled.  These presentations will not be available when recording calls.</description>
        <label>Training Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Indicates the type of presentation.  If blank or &quot;HQ&quot;, presentation is defined as one created by Headquarters.  &quot;Custom&quot; indicates a presentation created by an end user.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM.</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vault_DNS_vod__c</fullName>
        <description>Vault DNS of the document.</description>
        <label>Vault DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Doc_Id_vod__c</fullName>
        <description>Vault Id of the document.</description>
        <label>Vault Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_External_Id_vod__c</fullName>
        <description>External ID from Vault</description>
        <label>Vault External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_GUID_vod__c</fullName>
        <description>Global Unique Identifier for Vault instance where this document resides.</description>
        <label>Vault GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Last_Modified_Date_Time_vod__c</fullName>
        <description>Last modified date time of the content as reported by Vault.</description>
        <label>Vault Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_vod__c</fullName>
        <description>Version of the Vault Document.</description>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CLM Presentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_vod__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Approved_vod__c</columns>
        <columns>Hidden_vod__c</columns>
        <columns>Type_vod__c</columns>
        <columns>Presentation_Id_vod__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_ACN_ADMINS</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - ACN - ADMINS</label>
        <language>en_US</language>
        <queue>BMS_EMEA_ACN_ADMINS</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_AT_DVA</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Presentation_Id_vod__c</columns>
        <columns>Product_vod__c</columns>
        <columns>Approved_vod__c</columns>
        <columns>Hidden_vod__c</columns>
        <columns>Training_vod__c</columns>
        <columns>Country_Code_BMS_EMEA__c</columns>
        <columns>Field_Force_Type_BMS_SHARED__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>AT,at</value>
        </filters>
        <filters>
            <field>End_Date_vod__c</field>
            <operation>equals</operation>
        </filters>
        <label>BMS - EMEA - AT - DVA</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMS_CT_000_CRP</group>
            <group>BMS_CT_CIM_101</group>
            <group>BMS_CT_CIM_109</group>
            <group>BMS_CT_CIM_110</group>
            <group>BMS_CT_ONC_301</group>
            <group>BMS_CT_ONC_308</group>
            <group>BMS_CT_ONC_310</group>
            <group>BMS_CT_ONC_311</group>
            <group>BMS_CT_ONC_312</group>
            <group>BMS_EMEA_CO_ORDINATORS</group>
            <group>BMS_EMEA_CT_CMO</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_AT_Generic_Owner</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - AT - Generic Owner</label>
        <language>en_US</language>
        <queue>BMS_EMEA_AT_Generic_Owner</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_AT_Medical_Clm_Presentation_vod</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - AT Medical</label>
        <language>en_US</language>
        <queue>BMS_EMEA_AT_Medical</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_AT_Sales</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - AT Sales</label>
        <language>en_US</language>
        <queue>BMS_EMEA_AT_Sales</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_BE_DVA</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Presentation_Id_vod__c</columns>
        <columns>Product_vod__c</columns>
        <columns>Approved_vod__c</columns>
        <columns>Hidden_vod__c</columns>
        <columns>Training_vod__c</columns>
        <columns>Country_Code_BMS_EMEA__c</columns>
        <columns>Field_Force_Type_BMS_SHARED__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>BE,be</value>
        </filters>
        <filters>
            <field>End_Date_vod__c</field>
            <operation>equals</operation>
        </filters>
        <label>BMS - EMEA - BE - DVA</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMS_BX_000_CRP</group>
            <group>BMS_BX_CVS_101</group>
            <group>BMS_BX_CVS_109</group>
            <group>BMS_BX_ONC_313</group>
            <group>BMS_BX_ONC_322</group>
            <group>BMS_BX_ONC_328</group>
            <group>BMS_BX_ONC_329</group>
            <group>BMS_BX_ONC_346</group>
            <group>BMS_BX_ONC_353</group>
            <group>BMS_BX_ONC_361</group>
            <group>BMS_BX_PAI_501</group>
            <group>BMS_BX_PAI_510</group>
            <group>BMS_BX_VIM_201</group>
            <group>BMS_BX_VIM_214</group>
            <group>BMS_EMEA_BX_CMO</group>
            <group>BMS_EMEA_CO_ORDINATORS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_BE_Generic_Owner</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - BE - Generic Owner</label>
        <language>en_US</language>
        <queue>BMS_EMEA_BE_Generic_Owner</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_BE_Medical_Clm_Presentation_vod</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - BE Medical</label>
        <language>en_US</language>
        <queue>BMS_EMEA_BE_Medical</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_BE_Sales</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - BE Sales</label>
        <language>en_US</language>
        <queue>BMS_EMEA_BE_Sales</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_BX_BE_Sales_Clm_Presentation_vod</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - BX - BE - Sales</label>
        <language>en_US</language>
        <queue>BMS_EMEA_BX_BE_Sales</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_BX_NL_Sales_Clm_Presentation_vod</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - BX - NL - Sales</label>
        <language>en_US</language>
        <queue>BMS_EMEA_BX_NL_Sales</queue>
        <sharedTo>
            <group>BMS_EMEA_ACN_ADMINS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_CH_DVA</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Presentation_Id_vod__c</columns>
        <columns>Product_vod__c</columns>
        <columns>Approved_vod__c</columns>
        <columns>Hidden_vod__c</columns>
        <columns>Training_vod__c</columns>
        <columns>Country_Code_BMS_EMEA__c</columns>
        <columns>Field_Force_Type_BMS_SHARED__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country_Code_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>CH,ch</value>
        </filters>
        <filters>
            <field>End_Date_vod__c</field>
            <operation>equals</operation>
        </filters>
        <label>BMS - EMEA - CH - DVA</label>
        <language>en_US</language>
        <sharedTo>
            <group>BMS_CT_000_CRP</group>
            <group>BMS_CT_INO_301</group>
            <group>BMS_CT_INO_311</group>
            <group>BMS_CT_INO_312</group>
            <group>BMS_CT_INO_313</group>
            <group>BMS_CT_VNC_110</group>
            <group>BMS_CT_VNC_112</group>
            <group>BMS_CT_VNC_116</group>
            <group>BMS_EMEA_CO_ORDINATORS</group>
            <group>BMS_EMEA_CT_CMO</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_CH_Generic_Owner_Clm_Presentation_vod</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - CH - Generic Owner</label>
        <queue>BMS_EMEA_CH_Generic_Owner</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BMS_EMEA_CH_Medical_Clm_Presentation_vod</fullName>
        <filterScope>Queue</filterScope>
        <label>BMS - EMEA - CH Medical</label>
        <queue>BMS_EMEA_CH_Medical</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>CLM Presentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLM Presentations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <description>CLM Presentation end date must be later than start date.</description>
        <errorConditionFormula>End_Date_vod__c  &lt;  Start_Date_vod__c</errorConditionFormula>
        <errorDisplayField>End_Date_vod__c</errorDisplayField>
        <errorMessage>The end date must be later than the start date.</errorMessage>
    </validationRules>
</CustomObject>